@@ -238,6 +238,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 28444) Fix regression: edit-on-doubleclick retains revision id again
 * &apos; character entity is now allowed in wikitext
 * UtfNormal::cleanUp on an invalid utf-8 sequence no longer returns false if intl installed.
+* (bug 28561) The css class small will no longer make nested elements even smaller.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
